# drf_coursework

./: .env.sample  manage.py  pyproject.toml  readme.md
DRF_coursework/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
habits/: models.py  paginators.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habit_periodicity.py  0004_alter_habit_time.py  0005_alter_habit_related_habit.py  0006_alter_habit_user.py  0007_alter_habit_user.py  0008_habit_last_reminder.py
users/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: ccsu.py
users/migrations/: 0001_initial.py  0002_user_chat_id.py  0003_alter_user_chat_id.py  0004_alter_user_chat_id.py  0005_alter_user_chat_id.py
